# AutoTF_PH

./: .gitignore  CMakeLists.txt  imgui.ini
data/volume/: donut.nhdr  tooth.nhdr
include/: app_state.hpp  camera.hpp  colormaps.hpp  event_handler.hpp  gpu_renderer.hpp  merge_tree.hpp  persistence.hpp  ray_marcher.hpp  scene.hpp  simple_per_homo_example.hpp  threshold_cut.hpp  transfer_function.hpp  ui.hpp  volume.hpp  window.hpp  work_context.hpp
include/util/: random_generator.hpp  texture_loader.hpp  timer.hpp  vec_streams.hpp
include/vk/: buffer.hpp  command_pool.hpp  common.hpp  descriptor_set_handler.hpp  device_timer.hpp  extensions_handler.hpp  image.hpp  instance.hpp  logical_device.hpp  physical_device.hpp  pipeline.hpp  queue_families.hpp  render_pass.hpp  renderer.hpp  shader.hpp  storage.hpp  swapchain.hpp  synchronization.hpp  ve_log.hpp  vulkan_command_context.hpp  vulkan_main_context.hpp
scripts/: barcode.py  compare_persistence.py  donut.nrrd  donut_nrrd.py  evaluate_reprojection.py  histogram.py  merge_tree.py  metrics.py  persistence_diagram.py  plot_persistence_curves.py
shader/: compile_shader.py  image.frag  image.vert  ray_marcher.comp
src/: camera.cpp  event_handler.cpp  gpu_renderer.cpp  main  main.cpp  merge_tree.cpp  persistence.cpp  ray_marcher.cpp  scene.cpp  simple_per_homo_example.cpp  threshold_cut.cpp  transfer_function.cpp  ui.cpp  volume.cpp  window.cpp  work_context.cpp
src/util/: random_generator.cpp  texture_loader.cpp
src/vk/: command_pool.cpp  descriptor_set_handler.cpp  device_timer.cpp  extensions_handler.cpp  image.cpp  instance.cpp  logical_device.cpp  physical_device.cpp  pipeline.cpp  queue_families.cpp  render_pass.cpp  renderer.cpp  shader.cpp  storage.cpp  swapchain.cpp  synchronization.cpp  vulkan_command_context.cpp  vulkan_main_context.cpp
